# project-step-3-UBCTAO

./: .coverage  .gitignore  README.md  pyproject.toml  test_demo_projectstep1.ipynb
.github/workflows/: main.yml
budgetmaster/.ipynb_checkpoints/: __init__-checkpoint.py  test_demo_projectstep1-checkpoint.ipynb
budgetmaster/analysis/: reports.py
budgetmaster/analysis/.ipynb_checkpoints/: __init__-checkpoint.py  utils-checkpoint.py
budgetmaster/expense/.ipynb_checkpoints/: __init__-checkpoint.py  base_transaction-checkpoint.py  entry-checkpoint.py
budgetmaster/income/.ipynb_checkpoints/: __init__-checkpoint.py  entry-checkpoint.py  summary-checkpoint.py
tests/: test_expense_entry.py  test_income_summary.py
tests/.ipynb_checkpoints/: test_analysis_utils-checkpoint.py  test_suite_all-checkpoint.py
tests_project_step2&3/: test_analysis_reports.py  test_expense_base_transaction.py  test_income_entry.py  test_suite_all.py
