[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetmaster-tao"
version = "0.1.0"
description = "A simple budgeting package for managing income, expenses, and analysis."
authors = [
  { name="Tao Wang", email="your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["budgetmaster*"]
