[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetmaster-mds533-ubctao"
version = "0.1.0"
description = "BudgetMaster: a simple household budgeting package for the DATA533 project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Tao Wang" },
  { name = "Haozhong Ji" }
]

dependencies = [
  "matplotlib>=3.5"
]

[project.urls]
"Homepage" = "https://github.com/ubco-mds-2025-labs/project-step-3-UBCTAO"

[tool.setuptools.packages.find]
include = ["budgetmaster*"]
